# chat

./: LICENSE
backend/chat_server/: Cargo.toml  json  start_rest.sh  start_ws.sh  view_video.php?viewkey=ph60793009cc892
backend/chat_server/mongo_interface/: Cargo.toml
backend/chat_server/mongo_interface/src/: lib.rs
backend/chat_server/msg_interface/: Cargo.toml
backend/chat_server/msg_interface/src/: lib.rs  mongo_msg.rs  rest_msg.rs  ws_msg.rs
backend/chat_server/rest_server/: Cargo.toml
backend/chat_server/rest_server/src/: main.rs  subchat_rest_server.rs
backend/chat_server/ws_server/: Cargo.toml
backend/chat_server/ws_server/src/: main.rs  subchat_server.rs  subchat_ws_msg.rs__  subchat_ws_server copy.rs________  subchat_ws_server.rs
front_end/chat/: package.json  vue.config.js
front_end/chat/public/: index.html
front_end/chat/src/: App.vue  main.js
front_end/chat/src/assets/css/: clearfix.scss  main.css  main.scss
front_end/chat/src/assets/js/: sc_assist.js  sc_audio.js  sc_crypto.js  sc_msg.js  sc_net.js  sc_rest.js  sc_storage.js
front_end/chat/src/assets/js/app_js/: chat_page.js  data.js  group.js  login_page.js
front_end/chat/src/components/: Asset.vue  DefaultVue.vue  Group.vue  Login.vue
