[package]
name = "mongo_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
msg_interface = { path = "../msg_interface" }

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["sync"]