[package]
name = "msg_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
secp256k1 = "0.20"
sha256 = "1.0"
hex = "0.4"

#mongo_interface = { path = "../mongo_interface" }